bplabs/kubernetes-deployment/deployment-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-bp
spec:
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - backend-bp
      - key: env
        operator: In
        values:
          - staging
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: backend-bp
        env: staging
    spec:
      containers:
      - name: backend-bp
        image: fajarsujai/bpbe:12-main-2b7513b
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
      #   volumeMounts:
      #     - name: pv-backend-storage3
      #       mountPath: /var/www/html
      # volumes:
      #   - name: pv-backend-storage3
      #     persistentVolumeClaim:
      #       claimName: pvc-be3
---

apiVersion: v1
kind: Service
metadata:
  name: backend-bp-service
spec:
  type: NodePort
  selector:
    app: backend-bp
  ports:
  - port: 4000
    targetPort: 4000
    protocol: TCP
