bplabs/kubernetes-deployment/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-bp
spec:
  # serviceName: mongo-stateful-service
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - mongo-bp
      - key: env
        operator: In
        values:
          - staging
  replicas: 1
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: mongo-bp
        env: staging
    spec:
      containers:
      - name: mongo-bp
        image: mongo:3.6.19-xenial
        imagePullPolicy: Always
        ports:
        - containerPort: 27017
      #   volumeMounts:
      #       - mountPath: /data/db
      #         name: pv-mongo-storage3
      # volumes:
      #   - name: pv-mongo-storage3
      #     persistentVolumeClaim:
      #       claimName: pvc-mongo3

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-bp-service
spec:
  type: ClusterIP
  selector:
    app: mongo-bp
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
