bplabs/kubernetes-deployment/statefulset-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-bp
  labels:
    name: mongo-bp
spec:
  # https://github.com/kubernetes/kubernetes/issues/69608
  serviceName: mongo-stateful-service
  replicas: 2
  selector:
    matchLabels:
      name: mongo-bp
  template:
    metadata:
      name: mongo-bp
      labels:
        name: mongo-bp
    spec:
      containers:
        - name: mongo-bp
          image: mongo:3.6.19-xenial
          imagePullPolicy: Always
          ports:
           - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: pv-mongo-storage
      volumes:
        - name: pv-mongo-storage
          persistentVolumeClaim:
            claimName: pvc-mongo
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-bp-service
spec:
  type: ClusterIP
  selector:
    app: mongo-bp
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
