bplabs/kubernetes-deployment/ingress-bp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - host: be.fajarsujai.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend-bp-service
            port: 
              number: 4000
  - host: fe.fajarsujai.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend-bp-service
            port: 
              number: 3000
